# vectorless-grep

./: .env.example  .gitignore  CLAUDE.md  README.md  design_system.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: semiplan.md  settings.local.json
.github/workflows/: ci.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: agents.md  plan.md
eval/datasets/: sample_qa.jsonl
scripts/: bootstrap-windows.ps1  setup.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: documents.rs  mod.rs  projects.rs  reasoning.rs  settings.rs
src-tauri/src/core/: errors.rs  types.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_graph_layouts.sql  0003_projects.sql  0004_fk_repair_full_reset.sql  0005_ast_semantic_reset.sql  0006_reasoning_workflow.sql
src-tauri/src/db/repositories/: documents.rs  mod.rs  projects.rs  reasoning.rs
src-tauri/src/providers/: gemini.rs
src-tauri/src/reasoner/: agent_schema.rs  evaluator.rs  executor.rs  mod.rs  planner.rs  prompts.rs  query_scope.rs
src-tauri/src/security/: keyring.rs
src-tauri/src/sidecar/: mod.rs  native_parser.rs  types.rs
src-tauri/tests/: agentic_planner_tests.rs  db_repository_tests.rs  document_preview_tests.rs  migration_fk_integrity_tests.rs  native_parser_docx_tests.rs  parser_e2e_tests.rs  planner_tests.rs  query_scope_tests.rs  reasoning_event_tests.rs  reasoning_workflow_schema_tests.rs  sidecar_schema_tests.rs
src-tauri/tests/fixtures/: README.md
src-tauri/tests/fixtures/images/: generate_samples.rs
src-tauri/tests/fixtures/text/: README.md  sample.md  sample.txt
src-tauri/tests/fixtures/xlsx/: sample.csv
(+34 files in other folders)
